--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791387.md#1" target="_blank">专设房屋藏现金2亿多 赖小民自述贪腐细节</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/160705084919100615-600x398-1-150x120.jpg" align ="left"></a>中国华融资产管理股份有限公司（下称华融）前党委书记、董事长赖小民落马一年多后，其贪腐细节被曝光，包括专设暗号为“超市”的房屋藏匿赃款现金2亿多元，还收受大量房产、名车等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791381.md#1" target="_blank">大陆年轻人近90%是“负翁” 房子车子压顶</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791381.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/01/1101092241011164_1-150x120.jpg" align ="left"></a>近日出炉的大陆年轻人负债和消费报告显示，职场“90后”只有一成多的人没有负债，年轻人每月最大的开销、也是最感压力大的消费是住房和汽车。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791419.md#1" target="_blank">前白宫官员：初步协议已涉及301核心问题</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791419.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/0904f085274da48b382af40505cc971b-150x120.jpg" align ="left"></a>美中贸易代表将在周三（1月15日）签署“第一阶段”贸易协议。该协议涵盖了价值数百亿美元的农产品采购，并开始对中共长期的强迫技术转让行为进行改革。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791209.md#1" target="_blank">传翟天临拟复出 汪涵：盗窃学术成果令人不齿</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791209.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/1_meitu_1-150x120.jpg" align ="left"></a>在网传卷入学术造假风波的翟天临即将复出的消息后，多家陆媒1月13日报导了湖南卫视娱乐节目主持人汪涵在节目中的聊天内容：“我想发财、我想赚钱和我想考取博士都是一样让人尊重的。”“关键在于考取博士的方式，有的人抄袭别人的文章、盗窃别人的学术成果，就是让人不齿的。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791346.md#1" target="_blank">中共高调“奔小康” 43斤女大学生因贫去世</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8ad5fdd9ed9d103f27d08838c8dbd987-150x120.jpg" align ="left"></a>在中共当局高调宣传“2020年建成小康社会”之际，体重仅43斤的贵州女大学生吴花燕去世了，她因贫困曾用糟辣椒拌白米饭吃了5年。她在一首诗中写道：“我将回到云贵高原......在那里会有一艘丰衣足食的小船，带我驶向远方。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791054.md#1" target="_blank">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791054.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/VCG11490128167_meitu_1-150x120.jpg" align ="left"></a>近期在主持节目时频出口误的大陆知名主持人朱丹，1月12日受访时坦承：“口误让我20年的主持生涯彻底毁灭。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791068.md#1" target="_blank">签协议前 美将中国移除汇率操纵国名单</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MU0OC-600x400-1-150x120.jpg" align ="left"></a>多家美国媒体周一（1月13日）引述知情人士消息说，川普（特朗普）政府计划在签署第一阶段贸易协议前，宣布将中国从货币操纵国名单上除名。中美将在周一至周三（1月13日至15日）签署第一阶段贸易协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791322.md#1" target="_blank">吹捧导师崇高师母优美论文 上中国科学期刊</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791322.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/bkn-20200114013108601-0114_00952_001_01p-150x120.jpg" align ="left"></a>中国自然科学期刊《冰川冻土》2013年刊登的一篇论文，有网民发现该论文，竟用了两个章节来吹捧“导师的崇高感”和“师娘的优美感”，且论文获国家自然科学基金重点项目资助，令舆论哗然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 6:40 AM							</td></tr>
@@ -21,22 +26,9 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787667.md#1" target="_blank">哈尔滨法轮功学员刘淑梅生前遭受的迫害</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787667.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/p7466993a776840296-150x120.jpg" align ="left"></a>哈尔滨市宾县法轮功学员刘淑梅两次被非法劳教迫害，于2011年6月与老伴一同被绑架并非法判刑7年，因身体出现严重高血压，被保外就医，每年被相关部门定期检查身体、图谋收监，于2019年5月含冤离世，终年77岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790469.md#1" target="_blank">经济放缓和贸易战 中国2019年汽车销量再下滑</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/09/100929194205_1-150x120.jpg" align ="left"></a>根据行业组织最新发布的数据，中国国内经济放缓与中美贸易战的影响，再次体现在汽车销售市场。2019年，该国汽车销量再度下滑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790477.md#1" target="_blank">北京错判 港示范 美助攻 三效应促蔡大胜</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790477.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193087589-150x120.jpg" align ="left"></a>蔡英文以817万票史上最高得票纪录获得总统连任，成为国际瞩目的焦点。专家分析，促成空前的胜利，主要来自中共错判形势，不给九二共识空间，对台全面渗透；香港反送中带给台湾空前亡国感；美国大选前出台多项政策力挺台湾，三股力量产生的共伴效应，促成了民进党大胜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789302.md#1" target="_blank">【翻墙必看】揭秘中共公安如何混入香港警队</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789302.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1909290659171501-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.中共官员变换护照身份 逃避人权法案制裁
-香港反送中运动以来，黑警大行其道，香港人被自杀、性侵等案例不断发生，引发民愤。知情人士向大纪元透露，据可靠消息，很多坏事都是中共派出大陆公安干的。
-
-2.中共外交部被点名“选人用人视野不宽”
-日前，中共外交部被中共中纪委国家监委点名“选人用人视野不宽”。
-
-3.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789987.md#1" target="_blank">亚洲掀起自由浪潮 班农：川普主义力抗中伊</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198512650-150x120.jpg" align ="left"></a>在这个周末，自由浪潮席卷亚洲各地，其中包括伊朗民众上街抗议独裁政权、台湾人民在总统大选中以选票拒绝中共、香港民众继续进行反送中抗争等。对此，美国白宫前首席策略师班农（Steve Bannon）表示，受到美国总统川普（特朗普）抛弃绥靖政策，采行正面对抗中共和伊朗的“川普主义”的影响，在中东和亚洲支持自由民主的力量在增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 5:50 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791062.md#1" target="_blank">深圳区级国企一晚宴吃16万? 网民：冰山一角</a><br></h3>深圳市某区属国有企业，近日被曝一场企业内部宴会花费16万元（人民币，下同），有网民表示，这只曝出国企大吃大喝的冰山一角。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 5:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790689.md#1" target="_blank">人权组织成员被拒入香港 吁抵制中共霸权</a><br></h3>美国人权组织“人权观察”执行长肯尼思?罗斯（Kenneth Roth），原定到香港发表人权报告，12日抵港时遭港府拒绝入境。他批评北京当局明显在压制香港，限制港人在“一国两制”下的有限自由，并呼吁国际社会共同抵制中共的霸权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790555.md#1" target="_blank">台作家：绿营执政首要任务“消灭红色渗透”</a><br></h3>专栏作家“王立第二战研所”13日PO出“2020选后杂谈”文章，分析民进党胜利三大因素，并指出，800万票证明人民“反共匪侵略”，一遇国家主权危机，民进党保守派以台湾优先，其他再说，“所以，完全执政首要任务，必须是消灭红色渗透”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790482.md#1" target="_blank">还能承袭经国精神？柯志恩：国民党距民意太远</a><br></h3>国民党深陷败选阴霾，挑战新北第7选区失利的立委柯志恩13日在脸书发文，质疑“国民党还能承袭经国先生的精神吗?”她说，选举已是世代而非统独之争，经国先生“反共不反中”，捍卫民主自由价值，反观今日国民党，无论是路线论述或政策辩护，模糊、虚弱无力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790427.md#1" target="_blank">美国对中国可穿戴监测设备等启动337调查</a><br></h3>1月10日，美国国际贸易委员会（ITC）投票决定对特定可穿戴监测设备、系统及其组件（Certain Wearable MonitoringDevices，Systems，andComponentsThereof）启动337调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789726.md#1" target="_blank">内蒙古稀土大亨贿赂莫建成超千万 细节曝光</a><br></h3>最新一期财新周刊披露了“稀土大亨”、 内蒙古包头华美稀土高科有限公司（简称华美稀土）实际控制人马永茂的行贿细节，其向内蒙古包头市前市委书记莫建成行贿折合人民币超千万。马永茂因不服一审判决而上诉，近期再次出现在法庭上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:08 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789341.md#1" target="_blank">冤狱14年 山东张志超奸杀案改判无罪</a><br></h3>山东省男子张志超14年前被认定奸杀女同学被判无期徒刑，今天（2020年1月13日）被改判无罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
